--- a/camera-control.css
+++ b/camera-control.css
@@ -4,19 +4,21 @@ body {
     background: #3A393A;
     color: white;
     font-family: arial;
+    width: 300px;
+    height: 300px;
 }
 
 #PanTiltZoomPanel {
     position: absolute;
     top: 5px;
-    left: 5px;
-    width: 210px;
+    left: 210px;
+    width: 98px;
     height: 103px;
 }
 
 #PTZPanTiltCenter {
     position: absolute;
-    top: 32px;
+    top: 132px;
     left: 37px;
     width: 23px;
     height: 27px;
@@ -26,7 +28,7 @@ body {
 
 #PTZUp {
     position: absolute;
-    top: 0px;
+    top: 100px;
     left: 35px;
     width: 27px;
     height: 39px;
@@ -44,7 +46,7 @@ body {
 
 #PTZDown {
     position: absolute;
-    top: 54px;
+    top: 154px;
     left: 35px;
     width: 27px;
     height: 39px;
@@ -62,7 +64,7 @@ body {
 
 #PTZLeft {
     position: absolute;
-    top: 32px;
+    top: 132px;
     left: 2px;
     width: 37px;
     height: 27px;
@@ -80,7 +82,7 @@ body {
 
 #PTZRight {
     position: absolute;
-    top: 32px;
+    top: 132px;
     left: 58px;
     width: 37px;
     height: 27px;
@@ -99,8 +101,8 @@ body {
 #PTZZoomIn {
     background: url("images/Zoom_in_up.svg") no-repeat;
     position: absolute;
-    top: 1px;
-    left: 105px;
+    top: 0px;
+    left: 31px;
     width: 57px;
     height: 48px;
 }
@@ -117,7 +119,7 @@ body {
     background: url("images/Zoom_out_up.svg") no-repeat;
     position: absolute;
     top: 45px;
-    left: 105px;
+    left: 31px;
     width: 57px;
     height: 48px;
 }
@@ -132,21 +134,23 @@ body {
 
 #PresetButtons {
     position: absolute;
-    top: 12px;
-    left: 153px;
+    top: 200px;
+    left: 18px;
     width: 55px;
-    background: #4CFF4C;
 }
 
 #PresetButton {
     background: #4C4C4C;
     width: 58px;
     color: white;
+    border: 2px solid #747575;
+    border-radius: 8px;
+    margin-bottom: 3px;
 }
 
 #Status {
     position: absolute;
-    top: 98px;
+    top: 0px;
     left: 5px;
     color: white;
     font-size: 80%;
@@ -154,7 +158,7 @@ body {
 
 #Presets {
     position: absolute;
-    top: 130px;
+    top: 30px;
     left: 5px;
     width: 200px;
     background: #4C4C4C;
