--- a/garvey-dock2.css
+++ b/garvey-dock2.css
@@ -12,17 +12,15 @@ body {
 .grid-container {
     display: flex;
     flex-direction: row;
-    height: 50%;
+    flex-wrap: wrap;
 }
 
 .grid-child {
-    border-right: 2px solid #4A494A;
-    height: 100%
+    height: 100%;
 }
 
 .grid-last-child {
     flex: 1 1 auto;
-    border-right: 2px solid #4A494A;
     height: 100%
 }
 
@@ -41,7 +39,7 @@ body {
     position: relative;
     top: 2px;
     left: 3px;
-    width: 220px;
+    width: 140px;
     height: 100px;
 }
 
@@ -67,9 +65,7 @@ body {
 }
 
 .PresetButtons {
-    position: absolute;
     top: 0px;
-    left: 143px;
     width: 72px;
 }
 
@@ -92,7 +88,7 @@ body {
 }
 
 .PresetArea {
-    flex-grow: 1;
+    /* flex-grow: 1; */
     margin-left: 3px;
     margin-right: 3px;
     margin-bottom: 3px;
